fix: fix z-index for menu

--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -12,7 +12,6 @@
   background-color: $secondAppColor;
   border-radius: 15px;
   outline: 1px solid #ccc;
-  z-index: 6;
 
   &:hover {
     cursor: pointer;
